force-app/main/default/objects/Cust_Milestone_Marker__c/Cust_Milestone_Marker__c.object-meta.xml
<CustomObject>
    <label>Milestone Marker</label>
    <nameField>
        <label>Mile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Markers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>