force-app/main/default/objects/Cust_Milestone_Marker__c/fields/Available_Channels__c.field-meta.xml
<CustomField>
    <fullName>Available_Channels__c</fullName>
    <label>Available Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>