force-app/main/default/objects/Cust_Milestone_Marker__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Milestone Markers</relationshipLabel>
    <relationshipName>Milestone_Markers</relationshipName>
    <type>Lookup</type>
</CustomField>