force-app/main/default/objects/Cust_Milestone_Marker__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Milestone Markers</relationshipLabel>
    <relationshipName>Milestone_Markers</relationshipName>
    <type>Lookup</type>
</CustomField>