force-app/main/default/objects/Cust_Milestone_Marker__c/fields/Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Sent_DateTime__c</fullName>
    <label>Sent DateTime</label>
    <type>DateTime</type>
</CustomField>